--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -3,8 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0": "^2.19.0",
     "auth0-js": "^9.11.3",
+    "auth0-lock": "^10.11.0",
     "axios": "^0.19.0",
+    "core-js": "^3.2.1",
+    "env": "0.0.2",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.3.1",
+    "jwks-rsa": "^1.6.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.0.1",
