--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -3,11 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0": "^2.19.0",
+    "auth0-js": "^9.11.3",
+    "auth0-lock": "^11.17.2",
     "axios": "^0.19.0",
+    "cloudinary-react": "^1.1.4",
+    "core-js": "^3.2.1",
+    "dotenv": "^8.1.0",
+    "env": "^0.0.2",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^2.3.1",
+    "jwks-rsa": "^1.6.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.7",
     "react-id-swiper": "^2.3.2",
     "react-iframe": "^1.8.0",
+    "react-notify-toast": "^0.5.0",
     "react-particles-js": "^2.7.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.0.1",
