hovering displays the element at the top layer, clicking on the element maintains it as the top layer

--- a/photo-effects/.env
+++ b/photo-effects/.env
@@ -1,3 +1,4 @@
+SKIP_PREFLIGHT_CHECK=true
 REACT_APP_AUTH0_DOMAIN=photoeffectsapp.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=pHRE8X0Y5vSytjkESoSTKD2oyv71pEUI
 REACT_APP_AUTH0_CALLBACK=http://localhost:3000/callback
