--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "cloudinary-react": "^1.1.4",
     "react": "^16.9.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.7",
     "react-id-swiper": "^2.3.2",
