updated env auth0 variables to match the master auth0 variables

--- a/photo-effects/.env
+++ b/photo-effects/.env
@@ -1,4 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_AUTH0_DOMAIN=photoeffectsapp.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=pHRE8X0Y5vSytjkESoSTKD2oyv71pEUI
-REACT_APP_AUTH0_CALLBACK=http://localhost:3000/callback
+REACT_APP_AUTH0_CLIENT_ID=Q1GRxL5zS49qr3sW0MikK7qWg14vSrSe
+REACT_APP_AUTH0_CALLBACK=http://www.photoeffectsapp.com/callback
