--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -13,7 +13,7 @@
     "react-dropzone": "^10.1.7",
     "react-id-swiper": "^2.3.2",
     "react-iframe": "^1.8.0",
-    "react-notify-toast": "^0.5.0",
+    "react-input-range": "^1.3.0",
     "react-particles-js": "^2.7.0",
     "react-reveal": "^1.2.2",
     "react-router": "^5.0.1",
