--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -8,6 +8,8 @@
     "auth0-lock": "^11.17.2",
     "axios": "^0.19.0",
     "cloudinary-react": "^1.1.4",
+    "dom-to-image": "^2.6.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.7",
