--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -7,6 +7,7 @@
     "auth0-js": "^9.11.3",
     "auth0-lock": "^11.17.2",
     "axios": "^0.19.0",
+    "base64-to-image": "^1.0.2",
     "cloudinary-react": "^1.1.4",
     "dom-to-image": "^2.6.0",
     "jwt-decode": "^2.2.0",
