--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "cloudinary-react": "^1.1.4",
     "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jwt-decode": "^2.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
