--- a/photo-effects/package.json
+++ b/photo-effects/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-syntax-highlighter": "^11.0.2",
     "swiper": "^4.5.0",
     "uuid": "^3.3.3"
   },
